WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299158
[Site Isolation] Image in cross-site iframe isn't translated if frame is added after user translates page
https://bugs.webkit.org/show_bug.cgi?id=299158
Summary
[Site Isolation] Image in cross-site iframe isn't translated if frame is adde...
rupin
Reported
2025-09-18 23:56:56 PDT
[Site Isolation] Image in cross-site iframe isn't translated if frame is added after user translates page
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-09-18 23:57:06 PDT
<
rdar://problem/160917894
>
rupin
Comment 2
2025-09-19 00:26:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50990
EWS
Comment 3
2025-09-21 21:06:30 PDT
Committed
300305@main
(7c36bd3c403e): <
https://commits.webkit.org/300305@main
> Reviewed commits have been landed. Closing PR #50990 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug